--- a/app/styles/pages/contact.module.scss
+++ b/app/styles/pages/contact.module.scss
@@ -17,5 +17,10 @@
     flex-direction: column;
     align-items: center;
     margin: 0 auto;
-    margin-bottom: 1em;
+    margin-bottom: 3em;
+    margin-top: 3em;
+    width: 100%;
+    max-width: 1100px;
+    padding: 0 2em;
+    box-sizing: border-box;
 }
