--- a/app/styles/components/ContactForm.module.scss
+++ b/app/styles/components/ContactForm.module.scss
@@ -13,7 +13,7 @@
     margin-bottom: 3em;
     box-sizing: border-box;
     flex-basis: 100%;
-    gap: 3em;
+    gap: 5em;
 }
 
  .textContainer{
@@ -27,6 +27,7 @@
     width: 100%;
     max-width: 1100px;
     font-family: $primary-font;
+    margin-left: 2em;
    
     
     
@@ -95,8 +96,6 @@
     max-width: 1100px;
     box-sizing: border-box;
     
-   
-
     h1 {
         font-size: clamp(1.5rem, 5vw, 2rem);
         margin-bottom: 1em;
