style gallery pages

--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -23,9 +23,7 @@ $breakpoint-desktop-wide: 1280px;
 $breakpoint-desktop-ultra-wide: 1536px;
 $breakpoint-desktop-ultra-ultra-wide: 1920px;
 
-$primary-font: 'Montserrat', sans-serif;
-$secondary-font: 'Montserrat Alternates', sans-serif;
-$tertiary-font: 'Montserrat Subrayada', sans-serif;
+$primary-font: 'DM Sans', sans-serif;
 
 $font-size-mobile: 0.8rem;
 $font-size-tablet: 1.25rem;
