--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -1,7 +1,7 @@
 @use './app/styles/base/_variables' as *;
 @use './app/styles/utils/_mixins' as *;
 @use 'app/styles/base/_base' as *;
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Montserrat+Alternates:wght@400;700&family=Montserrat+Subrayada:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@200;300;400;900&family=Roboto:wght@400;900&display=swap");
 
 
 html {
