--- a/app/styles/pages/series.module.scss
+++ b/app/styles/pages/series.module.scss
@@ -12,7 +12,6 @@
   line-height: 1.5;
   box-sizing: border-box;
   scroll-behavior: smooth;
-
   background-color: none;
 }
 
@@ -22,7 +21,9 @@
   align-items: center;
   margin: 0 auto;
   margin-bottom: 5em;
+  
 }
+
 
 .titleContainer {
   display: flex;
@@ -37,33 +38,24 @@
   margin: 0 auto;
   transition: all 0.5s ease-in-out;
   
-  
-
   li{
     list-style: none;
     margin: 0 auto;
-    padding: 0;
-    
+    padding: 0;  
   }
   
   ul{
     margin: 0 auto;
     padding: 0;
   }
-  // :hover {
-  //   transform: scale(0.99);
-  //   transition: all 0.2s ease-in-out;
-  // }
+
 }
 
 .title{
   font-size: clamp(1.5rem, 5vw, 1.8rem);
   font-weight: 300;
-  margin-bottom: 0.5em;
-  margin-top: 0.5em;
   text-align: center;
   font-family: $primary-font;
-  top: 0;
   color: $secondary-color;
   background-color: $primary-color;
   width: 100%;
@@ -74,8 +66,9 @@
   box-sizing: border-box; 
   letter-spacing: 0.2em;
   border: 1px solid $thirteenth-color;
-  
+  margin-top: 0.65em;
 }
+
 .seriesTitleContainer{
   display: flex;
   justify-content: center;
@@ -88,6 +81,8 @@
   overflow: hidden;
   margin: 0 auto;
   transition: all 0.5s ease-in-out;
+  margin: 0;
+ 
 
   a{
     text-decoration: none;
@@ -106,6 +101,7 @@
     margin: 0 auto;
     padding: 0;
   }
+
   h1{
     font-size: clamp(1.5rem, 5vw, 1.8rem);
     font-weight: 300;
