--- a/app/styles/pages/recent.module.scss
+++ b/app/styles/pages/recent.module.scss
@@ -28,12 +28,13 @@
   box-sizing: border-box;
   scroll-behavior: smooth;
   transition: all 0.5s ease-in-out;
+ 
 }
 
 .imgContainer {
   margin: 0 auto;
-  margin-top: 0.7em;
-  
+  margin-top: 1.7em;
+  width: 100%;
   
   li{
     list-style: none;
@@ -54,6 +55,7 @@
     padding: 0;
     border-radius: 0.2em;
     
+    
     .transition-opacity {
       transition-property: opacity;
       transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -70,6 +72,7 @@
     .ease-in-out {
       transition-timing-function: ease-in-out;
     }
+    
   }
 
   img {
@@ -77,7 +80,6 @@
     height: auto;
     object-fit: cover;
     border-radius: 0.2em;
-    
     cursor: pointer;
 
     &:hover {
@@ -87,12 +89,12 @@
     
   }
 }
-
+.titleContainer{
+  margin-top: 0.65em;
+}
 .title {
   font-size: clamp(1.5rem, 5vw, 1.8rem);
   font-weight: 300;
-  margin-bottom: 0.5em;
-  margin-top: 0.5em;
   text-align: center;
   font-family: $primary-font;
   top: 0;
@@ -106,6 +108,7 @@
   box-sizing: border-box;
   letter-spacing: 0.2em;
   border: 1px solid $thirteenth-color;
+  
 }
 
 
