--- a/app/styles/components/ContactForm.module.scss
+++ b/app/styles/components/ContactForm.module.scss
@@ -183,6 +183,36 @@
 
     
 }
+@media screen and (max-width: 1024) {
+    .container{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 1em;
+    }
+
+    .textContainer{
+        flex-basis: 90%;
+        width: 90%;
+        max-width: 100%;
+        margin-bottom: 1em;
+        padding: 0.5em;
+    }
+
+    .formContainer{
+        flex-basis: 100%;
+        width: 100%;
+        max-width: 100%;
+        margin-bottom: 1em;
+        padding: 0.5em;
+
+        textarea, input{
+            min-width: 550px;
+            max-width: 550px;
+        }
+    }
+}
+
 
 @media screen and (max-width: 768px) {
     .container{
@@ -223,8 +253,8 @@
     }
 
     .textContainer{
-        flex-basis: 90%;
-        width: 90%;
+        flex-basis: 95%;
+        width: 95%;
         max-width: 100%;
         margin-bottom: 1em;
         padding: 0.5em;
@@ -281,13 +311,13 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        gap: 1em;
+        // gap: 1em;
     }
 
     .textContainer{
         flex-basis: 100%;
         width: 100%;
-        max-width: 100%;
+        max-width: 350px;
         margin-bottom: 1em;
         padding: 0.5em;
         box-sizing: border-box;
