--- a/app/styles/pages/slug.module.scss
+++ b/app/styles/pages/slug.module.scss
@@ -102,11 +102,11 @@
   width: 100%;
   max-width: 1100px;
   margin: 0 auto;
-  padding: 0.5em;
+  padding: 0.2em;
   border-radius: 0.2em;
   box-sizing: border-box;
   letter-spacing: 0.2em;
-  border: 1px solid $thirteenth-color;
+  // border: 1px solid $thirteenth-color;
 
   .transition-opacity {
     transition-property: opacity;
